tests/baselines/reference/emitArrowFunctionWhenUsingArguments06(strict=true).errors.txt
emitArrowFunctionWhenUsingArguments06.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments06.ts(1,12): error TS7006: Parameter 'arguments' implicitly has an 'any' type.
emitArrowFunctionWhenUsingArguments06.ts(2,25): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments06.ts (3 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
               ~~~~~~~~~
!!! error TS7006: Parameter 'arguments' implicitly has an 'any' type.
        var a = () => () => arguments;
                            ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    }